# pkg-risk

./: .gitignore  README.md  pkgrisk-planning-prompt.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: deploy.yml
data/: .metrics.json
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/playwright-report/: index.html
frontend/public/: CNAME
frontend/public/data/: .claude_progress.json  .claude_state.json  .github_rate_limit.json  .metrics.json  homebrew.json  homebrew_stats.json  npm.json  npm_stats.json  pypi.json  pypi_stats.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ActionItems.tsx  AlternativesCard.tsx  CVEList.tsx  ComparisonView.tsx  CriticalIssuesBanner.tsx  DependencyResults.tsx  ExecutiveVerdict.tsx  ExportButton.tsx  FileUploader.tsx  GradeBadge.tsx  MiniScoreBars.tsx  PackageDetailModal.tsx  PackageNotes.tsx  ProjectSummary.tsx  QuickVerdict.tsx  RecommendationsCard.tsx  RiskBadges.tsx  RowActions.tsx  ScoreBar.tsx  ScoreJustification.tsx  SecurityCard.tsx  ThemeToggle.tsx  WatchButton.tsx
frontend/src/hooks/: useAnalysisStorage.ts  useKeyboardNavigation.ts  usePackageNotes.ts  useTheme.ts  useUploadedProject.ts  useWatchList.ts
frontend/src/lib/: exportUtils.ts  registryFetcher.ts
frontend/src/pages/: About.tsx  Methodology.tsx  PackageDetail.tsx  PackageList.tsx  UploadDashboard.tsx  (+1 more)
frontend/tests/: ui-check.spec.ts
scripts/: build_chunks.py  build_frontend_data.py  sync_to_github.sh
src/pkgrisk/: __init__.py  cli.py
(+22104 files in other folders)
